# SIMU-PROJUDI

./: .gitignore  README.md  pyproject.toml
acesso/: admin.py  apps.py  forms.py  forms_admin_usuarios.py  models.py  permissions.py  urls.py  views.py  views_admin_usuarios.py
acesso/migrations/: 0001_initial.py  0002_usuario_is_coordenador.py  0003_delete_usuario.py
acesso/templates/: acesso.html
acesso/templates/acesso/: Painel_Gestao.html  cadastro_usuario.html  login.html  painel_administrativo.html  usuario_lista.html
base/: urls.py  views.py
base/templates/base/: base.html  cadastro_processo.html  home.html  redirecionamento_teste_sucesso.html
ciclos/: apps.py
core/: settings.py  urls.py
dominios/: apps.py
processos/: urls.py
usuarios/: admin.py  forms.py  models.py
usuarios/migrations/: 0001_initial.py
