[project]
name = "simu-projudi"
version = "0.1.0"
description = "Sistema de simulação Projudi"
authors = [
    {name = "Halbert Nascimento", email = "halbert.fac@gmail.com"},
    {name = "Caue Gomes", email = "caue@gmail.com"},
    {name = "Eduardo Netto", email = "eduardo@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "django>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "ruff",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    migrations
  | \.venv
  | \.git
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    "migrations",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
